Add extra tools to build environment Docker image.

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -9,6 +9,6 @@ WORKDIR /root
 
 RUN apt-get -q update && apt-get upgrade -y
 RUN apt-get install -y --no-install-recommends \
-            ca-certificates zip \
+            curl ca-certificates zip quilt \
             git make patch gcc g++ automake libtool gettext pkg-config \
             libc6-dev libglib2.0-dev libpng-dev libsdl2-dev libopenal-dev
